[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logging-module"
version = "0.1.0"
description = "A comprehensive logging and file utility module for Python applications"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["logging", "file-utilities", "tracing", "debugging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/yourusername/logging-module"
Documentation = "https://logging-module.readthedocs.io"
Repository = "https://github.com/yourusername/logging-module.git"
Issues = "https://github.com/yourusername/logging-module/issues"
