[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# This tells build exactly which folders to treat as packages
include = ["logging_module*"] 
# This ensures the 'logs' folder is ignored
exclude = ["logs*"]

[project]
name = "logging-module"
version = "0.2.1"
description = "Lightweight Python logger with timestamped file output, caller stack tracing, and working-directory-scoped file utilities"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Nathan T Nguyen", email = "nhatnguyen2807@gmail.com"}
]
keywords = ["logging", "file-utilities", "tracing", "debugging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
dev = ["pytest", "bump2version"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[project.urls]
CreatorGithub = "https://github.com/NhatNguyen5"
Homepage = "https://test.pypi.org/project/logging-module/"
Documentation = "https://github.com/NhatNguyen5/logging_module/wiki/Instructions"
Repository = "https://github.com/NhatNguyen5/logging-module.git"
Issues = "https://github.com/NhatNguyen5/logging_module/issues"
