[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ntnlog*"]
exclude = ["logs*"]

[project]
name = "ntnlog"
version = "0.5.0"
description = "Lightweight Python logger with log levels, rotation, colorization, async support, and working-directory-scoped file utilities"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Nathan T Nguyen", email = "nhatnguyen2807@gmail.com"}
]
keywords = ["logging", "file-utilities", "tracing", "debugging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "genbadge[coverage]", "bump2version"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=ntnlog --cov-report=term-missing"

[project.urls]
CreatorGithub = "https://github.com/NhatNguyen5"
Homepage = "https://pypi.org/project/ntnlog/"
Documentation = "https://github.com/NhatNguyen5/ntnlog/wiki"
Repository = "https://github.com/NhatNguyen5/ntnlog.git"
Issues = "https://github.com/NhatNguyen5/ntnlog/issues"
